--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ djlint>=1.0.0    # To auto-indent templates via "djlint --profile django --refor
 docutils>=0.18.1    # Used only by dbtemplates for RestructuredText
 factory-boy>=3.2.1
 github3.py>=3.2.0
+graphene-django>=2.15.0
 gunicorn>=20.1.0
 hashids>=1.3.1
 html2text>=2020.1.16    # Used only to clean comment field of secr/sreq
