--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "legacy:dev": "parcel",
     "legacy:build": "parcel build",
     "cypress": "cypress run",
-    "cypress:open": "cypress open",
-    "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@fullcalendar/bootstrap5": "5.11.0",
@@ -23,7 +21,7 @@
     "bootstrap": "5.1.3",
     "bootstrap-icons": "1.8.3",
     "browser-fs-access": "0.31.0",
-    "caniuse-lite": "1.0.30001365",
+    "caniuse-lite": "1.0.30001367",
     "d3": "7.6.1",
     "file-saver": "2.0.5",
     "highcharts": "10.2.0",
@@ -49,13 +47,13 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "2.6.2",
-    "@vitejs/plugin-vue": "2.3.3",
+    "@vitejs/plugin-vue": "3.0.1",
     "@vue/test-utils": "2.0.2",
     "browserlist": "latest",
-    "c8": "7.11.3",
-    "cypress": "10.3.0",
+    "c8": "7.12.0",
+    "cypress": "10.3.1",
     "cypress-real-events": "1.7.1",
-    "eslint": "8.19.0",
+    "eslint": "8.20.0",
     "eslint-config-standard": "17.0.0",
     "eslint-plugin-cypress": "2.12.1",
     "eslint-plugin-import": "2.26.0",
@@ -67,8 +65,7 @@
     "parcel": "2.6.2",
     "pug": "3.0.2",
     "sass": "1.53.0",
-    "vite": "2.9.14",
-    "vitest": "0.18.0"
+    "vite": "3.0.2"
   },
   "targets": {
     "ietf": {
