--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "legacy:dev": "parcel",
     "legacy:build": "parcel build",
     "cypress": "cypress run",
-    "cypress:open": "cypress open",
-    "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@fullcalendar/bootstrap5": "5.11.0",
@@ -49,7 +47,7 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "2.6.2",
-    "@vitejs/plugin-vue": "2.3.3",
+    "@vitejs/plugin-vue": "3.0.1",
     "@vue/test-utils": "2.0.2",
     "browserlist": "latest",
     "c8": "7.12.0",
@@ -67,8 +65,7 @@
     "parcel": "2.6.2",
     "pug": "3.0.2",
     "sass": "1.53.0",
-    "vite": "2.9.14",
-    "vitest": "0.18.1"
+    "vite": "3.0.2"
   },
   "targets": {
     "ietf": {
