--- a/requirements.txt
+++ b/requirements.txt
@@ -22,14 +22,14 @@ django-referrer-policy>=1.0
 django-simple-history>=3.0.0
 django-stubs==1.6.0    # The django-stubs version used determines the the mypy version indicated below
 django-tastypie==0.14.3    # Version must be locked in sync with version of Django
-django-vite>=2.0.2
+django-vite>=2.0.2      # Injects the proper vite client when in dev mode or points to the compiled client assets
 django-webtest>=1.9.10    # Only used in tests
 django-widget-tweaks>=1.4.12
 djlint>=1.0.0    # To auto-indent templates via "djlint --profile django --reformat"
 docutils>=0.18.1    # Used only by dbtemplates for RestructuredText
 factory-boy>=3.2.1
 github3.py>=3.2.0
-graphene-django>=2.15.0
+graphene-django>=2.15.0     # Provides GraphQL capabilities
 gunicorn>=20.1.0
 hashids>=1.3.1
 html2text>=2020.1.16    # Used only to clean comment field of secr/sreq
